--- a/Practical 1.ipynb
+++ b/Practical 1.ipynb
@@ -6,6 +6,7 @@
       "name": "Copy of Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP+qKl4OeXy92ZRIFFjnwpT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,28 +98,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "1vf3Eb_xx4S9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VcrpE_di9_QO"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -512,6 +491,125 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['postTestscore'].min"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xU0zNC025idq",
+        "outputId": "40e7a5f0-2cf2-4d46-b704-5bba55c22566"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method Series.min of 0    25\n",
+              "1    94\n",
+              "2    57\n",
+              "3    62\n",
+              "4    70\n",
+              "Name: postTestscore, dtype: int64>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['postTestscore'].kurt()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yi87q7Eb5nkJ",
+        "outputId": "6b3b155a-2328-4af5-d2eb-f3996e2d3475"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.4271505503426738"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.corr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cJQytjof5zW8",
+        "outputId": "da2bb83a-57bc-42d5-be54-5db0d9618790"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method DataFrame.corr of      name  age  preTestscore  postTestscore\n",
+              "0   Rojen   42             4             25\n",
+              "1   Iffat   52            24             94\n",
+              "2  Ayushi   36            31             57\n",
+              "3   Pooja   24             2             62\n",
+              "4   Sumit   73            30             70>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.cov"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sEsOkE-w5494",
+        "outputId": "9d592308-d459-407e-8d74-6d8cf2655033"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method DataFrame.cov of      name  age  preTestscore  postTestscore\n",
+              "0   Rojen   42             4             25\n",
+              "1   Iffat   52            24             94\n",
+              "2  Ayushi   36            31             57\n",
+              "3   Pooja   24             2             62\n",
+              "4   Sumit   73            30             70>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     }
